<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_commander</name>
  <version>1.1.7</version>
  <description>Python interface to MveoIt</description>
  <maintainer email="hara@rt-net.jp">hara</maintainer>
  <license>BSD-2.0</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>python3-pyassimp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
